deploy/kubernetes/ingress/ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: morphix

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: morphix-ingress
  namespace: morphix
  labels:
    name: morphix-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.morphix.com
        - jaeger.morphix.com
      secretName: tls-secret
  rules:
    - host: grafana.morphix.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: grafana
                port:
                  number: 3000
    - host: jaeger.morphix.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: jaeger
                port:
                  number: 16686
    - host: www.morphix.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: gateway-service
                port:
                  number: 8000
